# ideal-octo-succotash

./: README.md  meson.build
.github/workflows/: build.yml
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: meson.build
src/: application.vala  main.vala  meson.build  window.ui  window.vala
